# pkl

./: .gitignore  LICENSE  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: index.md
docs/examples/: overview.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/guide/: context-api.md  creating-plugins.md  events.md  lifecycle.md  loading-plugins.md  logging.md  resources.md
examples/: example.py  host_events.py
examples/plugins/a/: __init__.py  plugin.json  plugin.py
examples/plugins/a/subplugins/sp1/: plugin.json  plugin.py
examples/plugins/b/: plugin.json  plugin.py
pkl/: __init__.py  child_plugin.py  context.py  decorators.py  events.py  host.py  importer.py  loader.py  logging.py  metadata.py  plugin.py  resource.py  timing.py  types.py
tests/: __init__.py  conftest.py  test_access_control.py  test_context.py  test_decorators.py  test_namespace.py  test_plugin.py  test_resource.py
