[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pkl"]

[tool.setuptools.package-data]
pkl = ["py.typed", "*.pyi"]

[project]
name = "plugins-kernel"
version = "0.1.0"
description = "A Python plugin hosting system with comprehensive resource management, inspired by operating system concepts"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "xpodev"}
]
keywords = ["plugin", "plugins", "plugin-system", "resource-management", "lifecycle", "events"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://xpodev.github.io/pkl/"
Documentation = "https://xpodev.github.io/pkl/"
Repository = "https://github.com/xpodev/pkl"
Issues = "https://github.com/xpodev/pkl/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "black>=23.0"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py39"]

[dependency-groups]
dev = [
    "mkdocs==1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.4",
    "pytest>=8.4.2",
]
